update : app js

--- a/.env
+++ b/.env
@@ -21,11 +21,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=147.50.230.218
 DB_PORT=3306
-DB_DATABASE=new_cars
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=admin_NewCars
+DB_USERNAME=admin_NewCars
+DB_PASSWORD=Soft@2K7!
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
